[tool.poetry]
name = "ok"
version = "0.1.0"
description = "test"
authors = ["Red-Pill <<>>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.10.0"
telebot = "^0.0.4"
replit = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
